--- a/HabitOfGravity/local.properties
+++ b/HabitOfGravity/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Oct 04 13:09:09 EDT 2017
-sdk.dir=/Users/jonathanherrera/Library/Android/sdk
+#Wed Oct 04 14:22:14 EDT 2017
+sdk.dir=D\:\\Users\\Brent\\AppData\\Local\\Android\\sdk
