--- a/HabitOfGravity/app/src/main/AndroidManifest.xml
+++ b/HabitOfGravity/app/src/main/AndroidManifest.xml
@@ -19,8 +19,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".levelSelectActivity" android:parentActivityName=".MainActivity">
-        </activity>
+        <activity
+            android:name=".levelSelectActivity"
+            android:parentActivityName=".MainActivity"></activity>
+        <activity android:name=".settingsActivity"></activity>
     </application>
 
 </manifest>
