--- a/HabitOfGravity/local.properties
+++ b/HabitOfGravity/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Oct 04 14:22:14 EDT 2017
-sdk.dir=D\:\\Users\\Brent\\AppData\\Local\\Android\\sdk
+#Wed Oct 18 14:39:00 EDT 2017
+sdk.dir=C\:\\Users\\Kupo\\AppData\\Local\\Android\\Sdk
