--- a/HabitOfGravity/local.properties
+++ b/HabitOfGravity/local.properties
@@ -7,8 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Oct 24 16:40:12 EDT 2017
+#Fri Oct 27 12:23:46 EDT 2017
 >>>>>>>=6902b902f6c58caf3f478a47d41219673bcbb664
-sdk.dir=D\:\\Users\\Brent\\AppData\\Local\\Android\\sdk
-=\=\=\=\=\=\=
+sdk.dir=C\:\\Users\\Kupo\\AppData\\Local\\Android\\Sdk
 <<<<<<<=HEAD
+=\=\=\=\=\=\=
