--- a/HabitOfGravity/local.properties
+++ b/HabitOfGravity/local.properties
@@ -7,8 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Oct 30 11:56:54 EDT 2017
+#Tue Oct 31 15:29:56 EDT 2017
 >>>>>>>=6902b902f6c58caf3f478a47d41219673bcbb664
-sdk.dir=C\:\\Users\\chris\\AppData\\Local\\Android\\Sdk
-=\=\=\=\=\=\=
+sdk.dir=D\:\\Users\\Brent\\AppData\\Local\\Android\\sdk
 <<<<<<<=HEAD
+=\=\=\=\=\=\=
